--- a/Nativo/frontend/src/app/pages/profile/profile.component.html
+++ b/Nativo/frontend/src/app/pages/profile/profile.component.html
@@ -26,7 +26,7 @@
             <div class="text-center">
               <img
                 class="profile-user-img img-fluid img-circle"
-                src="assets/dist/img/user-mauricio.jpeg"
+                src="../../../assets/dist/img/robert.jpg"
                 alt="User profile picture"
               />
             </div>
@@ -34,16 +34,16 @@
             <p class="text-muted text-center">Software Engineer</p>
             <ul class="list-group list-group-unbordered mb-3">
               <li class="list-group-item">
-                <b>Followers</b> <a class="float-right">1,322</a>
+                <b>Activities</b> <a class="float-right">1,322</a>
               </li>
               <li class="list-group-item">
-                <b>Following</b> <a class="float-right">543</a>
+                <b>Average</b> <a class="float-right">98%</a>
               </li>
               <li class="list-group-item">
-                <b>Friends</b> <a class="float-right">13,287</a>
+                <b>Company</b> <a class="float-right">Bancolombia</a>
               </li>
             </ul>
-            <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>
+            <a href="#" class="btn btn-primary btn-block"><b>Edit</b></a>
           </div>
           <!-- /.card-body -->
         </div>
